increase font, bugfix text-wrap

--- a/packages/webamp-modern/src/css/elements.css
+++ b/packages/webamp-modern/src/css/elements.css
@@ -100,6 +100,7 @@ text i {
 }
 text wrap {
   display: block;
+  white-space: nowrap;
   background-image: inherit;
   background-size: 0px;
   position: relative;
